2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement 

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (idle_taper): Check wtaper->vaultqs.vaultq.head

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set sent_first_write and last_started_wtaper

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Improve new_tape

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send dump to first storage

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add vaulting information
	* server-src/amstatus.pl: Print vaulting information
	* installcheck/success-dumper-taper.pl: Fix for vaulting information

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Keep track of all label in use

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_source_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_dest_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_DB_Catalog2_MySQL.pl,
	  installcheck/Amanda_DB_Catalog2_PgSQL.pl: Check variable is set

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm: (_finish_copy): nb_parts default to 0

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2/SQL.pm (remove): Add a keep_label flag to
	  keep the label in the catalog

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Scan.pm: Set storage_name in
	  Amanda::Changer::Error

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>